--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
-fastapi
-uvicorn
-python-multipart
+django
+djangorestframework
+django-cors-headers
 google-cloud-firestore
 firebase-admin
 python-dotenv
+pillow
